fix: ended visual not working in dark mode

--- a/src/components/AuctionCard/styles.module.css
+++ b/src/components/AuctionCard/styles.module.css
@@ -164,6 +164,14 @@
 
 			> .image > .overlay {
 				@apply opacity-50;
+
+				&.blurred {
+					@apply opacity-100;
+
+					> .text {
+						@apply !text-white/50;
+					}
+				}
 			}
 
 			> .meta {
